src/test/deca/context/invalid/renduFinal/06method_overriding_diff_type.deca
// Description:
//      Overriding d'une méthode : type de retour invalide
//      => La méthode doit avoir le même type de retour que la méthode héritée
//
// Resultats:
//      Erreur contextuelle
//      Ligne 18 : la méthode plus (classe A) est de type int alors la méthode héritée (classe B) est de type void.

class B {
    int x=2;
    void plus(int y) {
            x=x+y;
    }
}

class A extends B {
    int y=2;
    int plus(int x) {
        return y=x+y;
    }
}

{
}
